refactor: add Javadoc, extract magic numbers, cleanup imports and comments